Fix spacing of bio content and add box shadow

--- a/src/assets/custom/css/_sass/_training-bio.scss
+++ b/src/assets/custom/css/_sass/_training-bio.scss
@@ -10,12 +10,16 @@
 
 .training-bio__wrapper {
   @include lateral-spacing;
-  display: flex;
-  position: relative;
 
   @include medium-large-and-extra-large {
     @include max-width--out-there;
   }
+}
+
+.training-bio__wrapper-inner {
+  @include style-card-box-shadow;
+  display: flex;
+  position: relative;
 }
 
 .training-bio__instructor-container {
